RESOLVED FIXED204933
REGRESSION: ASSERTION FAILED: FontCache::singleton().generation() == m_generation
https://bugs.webkit.org/show_bug.cgi?id=204933
Summary REGRESSION: ASSERTION FAILED: FontCache::singleton().generation() == m_genera...
Myles C. Maxfield
Reported 2019-12-05 17:59:30 PST
After a user installs a font, a webpage may still be unable to use it
Attachments
Patch (7.53 KB, patch)
2019-12-05 18:05 PST, Myles C. Maxfield
no flags
Patch (7.56 KB, patch)
2019-12-05 18:06 PST, Myles C. Maxfield
no flags
patch (4.77 KB, patch)
2019-12-17 06:25 PST, Antti Koivisto
no flags
Myles C. Maxfield
Comment 1 2019-12-05 18:05:30 PST
Myles C. Maxfield
Comment 2 2019-12-05 18:06:28 PST
Myles C. Maxfield
Comment 3 2019-12-05 18:07:20 PST
Antti Koivisto
Comment 4 2019-12-06 02:33:37 PST
Comment on attachment 384984 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=384984&action=review > Source/WebCore/platform/graphics/FontCascade.cpp:189 > + if (a.fontCacheGeneration != b.fontCacheGeneration) > + return false; The design is that the font cascade cache gets wiped via invalidateFontCascadeCache() when needed. This should be happening on font cache generation increment. Why isn't this mechanism sufficient? Has this regressed somehow?
Antti Koivisto
Comment 5 2019-12-06 02:34:53 PST
If invalidateFontCascadeCache is not happening there might be other caches we are failing to invalidate too.
Antti Koivisto
Comment 6 2019-12-17 06:25:12 PST
WebKit Commit Bot
Comment 7 2019-12-17 11:19:55 PST
Comment on attachment 385881 [details] patch Clearing flags on attachment: 385881 Committed r253633: <https://trac.webkit.org/changeset/253633>
WebKit Commit Bot
Comment 8 2019-12-17 11:19:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.