REGRESSION: ASSERTION FAILED: FontCache::singleton().generation() == m_generation https://bugs.webkit.org/show_bug.cgi?id=204933 <rdar://problem/57458432>

Reviewed by Zalan Bujtas.

Source/WebCore:

Test: fast/shadow-dom/font-cache-invalidation.html

When font cache version number is bumped we need to invalidate matches declarations caches because
they may now contain stale font references. The code to do this failed to look into shadow trees.

* dom/Document.cpp:
(WebCore::Document::invalidateMatchedPropertiesCacheAndForceStyleRecalc):
* style/StyleScope.cpp:
(WebCore::Style::Scope::invalidateMatchedDeclarationsCache):

Also invalidate the shadow trees.

* style/StyleScope.h:

LayoutTests:

* fast/shadow-dom/font-cache-invalidation-expected.txt: Added.
* fast/shadow-dom/font-cache-invalidation.html: Added.


Canonical link: https://commits.webkit.org/218540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253633 268f45cc-cd09-0410-ab3c-d52691b4dbfc