Source/WebCore/dom/Document.cpp
@@ -2309,8 +2309,8 @@ void Document::fontsNeedUpdate(FontSelector&)
 
 void Document::invalidateMatchedPropertiesCacheAndForceStyleRecalc()
 {
-    if (auto* resolver = styleScope().resolverIfExists())
-        resolver->invalidateMatchedDeclarationsCache();
+    styleScope().invalidateMatchedDeclarationsCache();
+
     if (backForwardCacheState() != NotInBackForwardCache || !renderView())
         return;
     scheduleFullStyleRebuild();
